Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23883

Anchors not working for children of Viewport

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt3D 1.0
    • Qt3D TP2
    • Qt3D

      When children of a Viewport object have anchors dependent on the Viewport, these are not updated correctly.
      For example, the height and width of MouseArea become zero when "anchors.fill: parent" is set.

        For Gerrit Dashboard: QTBUG-23883
        # Subject Branch Project Status CR V

            dpope Daniel Pope (closed Nokia identity) (Inactive)
            chham Christopher Ham (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes