Fix for QTBUG-23883 - Anchors not working under Viewport

Children of a Viewport can now successfully set their anchors.

Task-number: QTBUG-23883
Change-Id: I16f41fc1d02ea9baac3ffba66494a2b768a3ca03
Reviewed-by: Danny Pope <daniel.pope@nokia.com>